--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -10,12 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cbe45c1e-ecbb-4793-b803-00e624b6b055",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
+      "(as ‘lib’ is unspecified)\n",
+      "\n",
+      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
+      "(as ‘lib’ is unspecified)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "install.packages(\"cowplot\")\n",
     "install.packages(\"kknn\")\n",
@@ -24,12 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31c75def",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
+      "(as ‘lib’ is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(tidymodels): there is no package called ‘tidymodels’\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(tidymodels): there is no package called ‘tidymodels’\nTraceback:\n",
+      "1. library(tidymodels)"
+     ]
+    }
+   ],
    "source": [
     "#import libraries\n",
     "install.packages(\"themis\")\n",
@@ -61,7 +93,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This data set was extracted from the article written by Kolku and Ozkan, “Multiclass classification of dry beans using computer vision and machine learning techniques” (2020). Koluk and Ozkan (2020) explore the use of computer vision and machine learning techniques to classify dry beans into different classes. The goal of the study was to use machine learning algorithms to accurately classify the dry beans into their respective varieties based on the extracted features. This study is relevant for the food industry and agriculture, as it can potentially help in automating the classification process of dry beans, which is currently done manually and is time-consuming.\n",
+    "This data set was extracted from the article written by Kolku and Ozkan, “Multiclass classification of dry beans using computer vision and machine learning techniques” (2020). Koluk and Ozkan (2020) explored the use of computer vision and machine learning techniques to classify dry beans into different classes. Based on the study's dataset, this report will also try to accurately classify the dry beans into their types based on the extracted features. This report is relevant for the food industry and agriculture, as it can potentially help in automating the classification process of dry beans, which is currently done manually and is time-consuming.\n",
     "\n",
     "**Research Question**: Can we accurately predict the bean type in an image based on the predictors Area and Roundness?\n",
     "\n",
@@ -72,7 +104,7 @@
     "\n",
     "Our variable of intetrest (Kolku & Ozkan, 2020).:\n",
     "- **Area**:The area of a bean zone and the number of pixels within its boundaries.\n",
-    "- **Roundness**: Calculated with the following formula: (4piA)/(P^2). Where A is the area and P is the perimeter of the bean"
+    "- **Roundness**: Calculated with the following formula: (4piA)/(P^2). Where A is the area and P is the perimeter of the bean."
    ]
   },
   {
@@ -88,7 +120,7 @@
    "id": "4446a1c8-968a-4cd2-8849-e16a2329e7aa",
    "metadata": {},
    "source": [
-    "**Load Data**: A zip file was loaded from the original web source (https). Then, we create a temporary file path to store the 'temp' variable, to temporarily store the downloaded zip file before it is extracted. Next, we use 'download.fil' to download the zip file and save it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named our the data frame 'bean'. \n"
+    "**Load Data**: A zip file was loaded from the original web source (https). Then, we create a temporary file path to store the *temp* variable, to temporarily store the downloaded zip file before it is extracted. Next, we use 'download.file' to download the zip file and save it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named our the data frame 'bean'. \n"
    ]
   },
   {
@@ -745,12 +777,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d827405f-3648-46b8-9185-a2f8ad1d864c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in ggplot(bean_predictions, aes(x = Area, y = roundness, color = .pred_class)): object 'bean_predictions' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in ggplot(bean_predictions, aes(x = Area, y = roundness, color = .pred_class)): object 'bean_predictions' not found\nTraceback:\n",
+      "1. ggplot(bean_predictions, aes(x = Area, y = roundness, color = .pred_class))"
+     ]
+    }
+   ],
    "source": [
     "#visual comparison of true class vs predicted class\n",
     "\n",
@@ -788,7 +830,7 @@
     "\n",
     "With the help of a classification model, we expect to find a well-performing model that can predict the type of beans based on their roundness and area with at least 85% accuracy. From *Table 7*, the result of the k-nearest neighbors (k-NN) model shows an estimated accuracy of 0.8812622. This means that the model was able to correctly classify 88.13% of the beans in the dataset based on their area and roundness. This is a relatively high accuracy as the classes are similar in appearance and is difficult to differentiate based on these features alone. While this estimated accuracy is high, if we use all the predictor that was the proposed in the paper that the dataset was based on, the KNN algorithm will produce a classifier with a higher accuracy estimate (exactly 92.52% in the paper). \n",
     "\n",
-    "Now looking at each individual class prediction, in *Table 8*, we can see that the classifier predicts the Bombay bean type correctly 100% of the time. While the classifier predicts the Sira bean type the least accurately, if we take the number of predictions that were correctly divided by the number of predictions made using Table 8, we can see that the classifier only predicts the Sira bean type correct 82% of the time, whereas the classifier predicts other bean types correctly more than 84% of the time. We can see the same result between Figure 10 and 11, where the classifier cannot predict Sira bean type that has roundness and area measurements that are similar to the Horoz bean type.\n",
+    "Now looking at each individual class prediction, in *Table 8*, we can see that the classifier predicts the Bombay bean type correctly 100% of the time. While the classifier predicts the Sira bean type the least accurately, if we take the number of predictions that were correctly divided by the number of predictions made using *Table 8*, we can see that the classifier only predicts the Sira bean type correct 82% of the time, whereas the classifier predicts other bean types correctly more than 84% of the time. We can see the same result between *Figure 10* and 11, where the classifier cannot predict Sira bean type that has roundness and area measurements that are similar to the Horoz bean type.\n",
     "\n",
     "**Findings Impact**\n",
     "\n",
