Markdown cell edits

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -153,7 +153,8 @@
    "id": "b61ee2bd",
    "metadata": {},
    "source": [
-    "**Select variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. According to a study published in the Journal of Food Engineering (2012), area and roundness were among the most important features for accurate classification (Rahman et al., 2012). Also, these two variable produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*)."
+    "**Select variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. According to a study published in the Journal of Food Engineering (2012), area and roundness were among the most important features for accurate classification (Rahman et al., 2012). Also, these two variable produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*).\n",
+    "We will select the relevant columns, 'Area', 'roundness', and 'Class from *Table 1* to create another table. "
    ]
   },
   {
@@ -183,7 +184,7 @@
    "id": "e85aca7e-63b1-4254-b522-620de4b2845f",
    "metadata": {},
    "source": [
-    "**Visualize plot**: all of the bean types, in relation to roundness and area, are plotted on the graph. "
+    "**Visualize plot**: all of the bean types, in relation to roundness and area, are plotted on the graph to better understand the dataset. "
    ]
   },
   {
@@ -291,7 +292,7 @@
    "id": "3971d72c",
    "metadata": {},
    "source": [
-    "Graphing the training dataset in plot point. "
+    "Graphing the training dataset in plot point. *Figure 2* is very similar to *Figure 3*, which is good as the datasets were split randomly. "
    ]
   },
   {
@@ -348,7 +349,7 @@
    "id": "756e4642",
    "metadata": {},
    "source": [
-    "*Table 4* shows us the distribution of bean types in the training set. "
+    "*Table 4* and *Figure 4* shows us the distribution of bean types in the training set."
    ]
   },
   {
@@ -373,9 +374,11 @@
    "id": "bbdcc8b2",
    "metadata": {},
    "source": [
-    "**Upsampling**: By looking at the *Table 3*, and *Figure 4* viewing the total number of datapoints for each type of beans, we can see that there are a big difference in number of datapoints between Dermason bean type with other type of beans. Therefore, we will upsample the training dataset so that each Class of bean has a voting power when it comes to the classfication of the testing dataset.\n",
+    "**Upsampling**: By looking at the *Table 4* and *Figure 4* viewing the total number of datapoints for each type of beans, we can see that there are a big difference in number of datapoints between Dermason bean type with other type of beans. Therefore, we will upsample the training dataset so that each Class of bean has a voting power when it comes to the classfication of the testing dataset. This is done in the 'recipe' and 'step_upsample ()' functions. \n",
     "\n",
-    "**Scaling:** all data is called to avoid features with large values dominating the decision process. The Scaling of the data later be part of the Classifier building process called `workflow()`."
+    "**Scaling:** all data is called to avoid features with large values dominating the decision process. The Scaling of the data later be part of the Classifier building process called `workflow()`.\n",
+    "\n",
+    "Next, we plot the data agin to see what the upsampled data set looks like. We can see that each cluster should have approximately equal data points. "
    ]
   },
   {
@@ -409,7 +412,7 @@
    "id": "48e17637",
    "metadata": {},
    "source": [
-    "**Summary of the data set**: Next we will look at Statistical distribution of our chosen variables, in table and boxplot form. We calculated the basic statistics such as range and standard deviation for each feature, as well as determining the distribution. To do this, we group the beans by their types (Class), and create a new dataframe that includes the statistics in each column. \n"
+    "**Summary of the data set**: Next we will look at Statistical distribution of our chosen variables, in table and boxplot form. To understand the distribution, we calculated the basic statistics such as range and standard deviation. To do this, we group the beans by their types (Class), and create a new dataframe that includes the statistics in each column. \n"
    ]
   },
   {
@@ -438,9 +441,7 @@
    "source": [
     "*Table 5: Statistical distribution of each predictor based on their class*\n",
     "\n",
-    "From *Table 5*, we can see that... \n",
-    "pivot_longer was used to... \n",
-    "we grouped by "
+    "Next, we create *Table 6* to explore the statistical distribution of the \"Area\" and \"roundness\".   First, we select these to variables and reshape the data using 'pivot_longer()' to make it tidy. We then group the data by the \"Features\" column and calculate summary statistics for each feature, including the mean, minimum, maximum, and standard deviation."
    ]
   },
   {
@@ -471,8 +472,7 @@
    "source": [
     "*Table 6: Statistical distribution of the predictors in the whole dataset*\n",
     "\n",
-    "From *Table 6*, we can see that... \n",
-    "Then, we graphed the ... "
+    "Then, to learn more about the distribution, we graph the area distribution for each type of bean. "
    ]
   },
   {
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Graphing area distribution for each type of bean\n",
+    "\n",
     "area_box_plot <- final_bean_data |>\n",
     "                ggplot(aes(x = Class, y = Area))+\n",
     "                geom_boxplot()+\n",
@@ -498,7 +498,9 @@
    "id": "23e5633e-86e2-4705-a92e-5de02de90890",
    "metadata": {},
    "source": [
-    "By looking at *Figure 5*, we can find that the square box which represent 50% of each bean type has little overlap over each other (Krzywinski et al., 2014) . we can also find that 5/6 bean type (Sira, Seker, Horoz, Cali, and Bombay) has outliers that is higher than most of its usual area size, base on the dots above the upper whiskers (Krzywinski et al., 2014). We might expect that these outliers might also affect the accuracy of the classifier as these outliers starts overlapping over other bean types area measurements. However, out of all the bean type Bombay seems to have its distribution in area distinguished over other bean type, so we might see that the classifier can predict the Bombay bean type better than other type. While Sira and Seker area distribution seems to over over each other so we also expect that this can affect classifier accuracy."
+    "By looking at *Figure 5*, we can find that the square box which represent 50% of each bean type has little overlap over each other (Krzywinski et al., 2014) . we can also find that 5/6 bean type (Sira, Seker, Horoz, Cali, and Bombay) has outliers that is higher than most of its usual area size, base on the dots above the upper whiskers (Krzywinski et al., 2014). We might expect that these outliers might also affect the accuracy of the classifier as these outliers starts overlapping over other bean types area measurements. However, out of all the bean type Bombay seems to have its distribution in area distinguished over other bean type, so we might see that the classifier can predict the Bombay bean type better than other type. While Sira and Seker area distribution seems to over over each other so we also expect that this can affect classifier accuracy.\n",
+    "\n",
+    "Then, we graph the box plot showing roundness distribution for each type of box plot. "
    ]
   },
   {
@@ -508,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Graphing box plot showing roundness distribution for each type of box plot\n",
+    "\n",
     "roundness_box_plot <- final_bean_data |>\n",
     "                ggplot(aes(x = Class, y = roundness))+\n",
     "                geom_boxplot()+\n",
@@ -524,7 +526,7 @@
    "id": "9d3deea9-7925-42cd-b130-cd0810e0df44",
    "metadata": {},
    "source": [
-    "In *Figure 7*, we can see that most of the bean type 50% of roundness distribution does not overlap each other. However there are a lot of outliers that cause these bean type roundness distribution to overlap each other. The overlap of roundness distribution of dataset matches the distribution of bean type of Area and Roundness that we see in Figure 1, 2, 3, 5. However, due to 50% of the dataset mostly don't overlap each other as we seen in *Figure 7*, we can also see distinct cluster in Figure 1,2, 3, and 5."
+    "In *Figure 7*, we can see that most of the bean type 50% of roundness distribution does not overlap each other. However there are a lot of outliers that cause these bean type roundness distribution to overlap each other. The overlap of roundness distribution of dataset matches the distribution of bean type of Area and Roundness that we see in Figure 1, 2, 3, 5. However, due to 50% of the dataset mostly don't overlap each other as we seen in *Figure 7*, we can also see distinct cluster in Figure 1, 2, 3, and 5."
    ]
   },
   {
@@ -540,7 +542,7 @@
    "id": "e289d843-d2d9-4309-853d-777aabb6660c",
    "metadata": {},
    "source": [
-    "Now we should start building the classifier. However, before starting to build the classifier, we need to create the scaling and centering recipe on the training dataset, to ensure that all predictors are standardized, so that predictor with larger scales won't create a greater unwanted affect. We sent the seed to 2022 so the codes can be reproducible, and it produces consistent results. "
+    "Now we should start building the classifier. However, before starting to build the classifier, we need to create the scaling and centering recipe on the training dataset, to ensure that all predictors are standardized, so that predictor with larger scales won't create a greater unwanted affect. We set the seed to 2022 so the codes can be reproducible, and it produces consistent results. "
    ]
   },
   {
@@ -563,7 +565,7 @@
    "id": "b50e9394-403f-406e-a3a7-791df2f7daa7",
    "metadata": {},
    "source": [
-    "Next, we need to tune our model using the cross-validation method, so that we can choose the optimal K-neighbour. First we need to specify the model for cross-validation, where the neighbour = tune() is used to test accuracies of model across different range of k-neighbours. Cross-validation is a method to help us tune our classifier. Cross-validation will randomly divide the training sets into specified number of smaller set with the same size. The method then will train our classifier using the remaining sets that were not accept as one test set. This process is repeated until all of the set that was divided has a chance to be a test set (Arlot and Celisse, 2010). Here we use cross-validation across a range of number of neighbours and get the number with the best accuracy estimate."
+    "Next, we need to tune our model using the cross-validation method, so that we can choose the optimal K-neighbour. First we need to specify the model for cross-validation, where the neighbour = tune() is used to test accuracies of model across different range of k-neighbours. Cross-validation is a method to help us tune our classifier. Cross-validation will randomly divide the training sets into specified number of smaller set with the same size. The method then will train our classifier using the remaining sets that were not accept as one test set. This process is repeated until all of the set that was divided has a chance to be a test set (Arlot and Celisse, 2010). Here, we use cross-validation across a range of number of neighbours and get the number with the best accuracy estimate."
    ]
   },
   {
@@ -632,7 +634,7 @@
    "id": "d8bc0743-4b49-4521-a93a-d57f1cbb73b6",
    "metadata": {},
    "source": [
-    "Now we graph the k-neighbours against the mean accuracy calculated from cross-validated across 10 folds."
+    "Now we graph the k-neighbours against the mean accuracy calculated from cross-validated across 10 folds to find the best k to use. "
    ]
   },
   {
@@ -741,10 +743,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77952a93-8984-4248-8b51-e9e1441f46e1",
+   "metadata": {},
+   "source": [
+    "As we can see from 'Table 7', the accuracy the result of the k-nearest neighbors (k-NN) model shows an estimated accuracy of 0.8812622."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af7fbe6a-bb7a-4e3e-9eea-d9ffd8ee90c3",
    "metadata": {},
    "source": [
-    "**Visualizations of the analysis**: Now, we build a confusion matrix that compare the prediction made to the truth values. A confusion matrix is shown below to help interpret the results and communicate the findings effectively. The confusion matrix is also used to evaluate the performance of our model, and provides us with the accuracy percentages. The percentage represents the proportion that the cells were correctly. "
+    "**Visualizations of the analysis**: Now, we build a confusion matrix that compare the prediction made to the truth values. A confusion matrix is shown below to help interpret the results and communicate the findings effectively. The confusion matrix is also used to evaluate the performance of our model, and provides us with the accuracy percentages."
    ]
   },
   {
@@ -769,10 +779,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77952a93-8984-4248-8b51-e9e1441f46e1",
+   "id": "b4957c1f-34cb-4fba-b4fb-9cf5a828093c",
    "metadata": {},
    "source": [
-    "As we can see from 'Table 8', the accuracy the result of the k-nearest neighbors (k-NN) model shows an estimated accuracy of 0.8812622."
+    "From *Table 8*, we can see the the number of true positives, true negatives, false positives, and false negatives for each class label. The diagonal of the matrix represents the correctly classified instances for each class label. For example, if we look at the first row - the BOMBAY class. All 141 instances that were predicted to belong to the BOMBAY class were actually labeled as BOMBAY, so it has 100% accuracy for that class. To calculate the accuracy of the model, we divide the diagonal of the matrix by all of the numbers, which is 2709/3074, and is 0.8812622, consistent with our results from *Table 7*."
    ]
   },
   {
