Table analysis & results

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -786,6 +786,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d6f80cc-016d-48ec-a196-648541d6ed38",
+   "metadata": {},
+   "source": [
+    "Finally, we want a visual comparison of true class vs predicted class. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "d827405f-3648-46b8-9185-a2f8ad1d864c",
@@ -804,7 +812,6 @@
     }
    ],
    "source": [
-    "#visual comparison of true class vs predicted class\n",
     "\n",
     "bean_predictions_plot <- bean_predictions |>\n",
     "    ggplot(aes(x = Area, y = roundness, color = .pred_class)) +\n",
@@ -826,7 +833,7 @@
    "id": "2bc5b215-0229-4adc-a811-ad58352d1f9f",
    "metadata": {},
    "source": [
-    "*Figure 10* and *Figure 11* shows... "
+    "We can see that *Figure 10* and *Figure 11* are very similar, which is consistent with our model accuracy of 88.13%. "
    ]
   },
   {
@@ -842,9 +849,13 @@
     "\n",
     "Now looking at each individual class prediction, in *Table 8*, we can see that the classifier predicts the Bombay bean type correctly 100% of the time. While the classifier predicts the Sira bean type the least accurately, if we take the number of predictions that were correctly divided by the number of predictions made using *Table 8*, we can see that the classifier only predicts the Sira bean type correct 82% of the time, whereas the classifier predicts other bean types correctly more than 84% of the time. We can see the same result between *Figure 10* and 11, where the classifier cannot predict Sira bean type that has roundness and area measurements that are similar to the Horoz bean type.\n",
     "\n",
+    "The model can correctly classify 88.13% of the data. To improve the accuracy of the model, we can increase the training data or collect more data. Using more data to train the model can help it lean and better generalize the model on new data. Also, we can add more predictor variables in the model and explore how that might change the accuracy of the model.  \n",
+    "\n",
     "**Findings Impact**\n",
     "\n",
-    "This classification model can impact the food and agriculture industry. An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
+    "This classification model can impact the food and agriculture industry. \n",
+    "\n",
+    "An automated system can be created to classifiy the type of bean based on their physical appearance. This is espcially useful when food and agriculture companies collect different types of beans together, dry them, and want to package them based on different types. The model we built can help to streamline the service, gain quality control and reduce the time for people to manually separate the beans. \n",
     "\n",
     "**Future research questions**\n",
     "- Can other variables such as major axis length or the perimeter be good predictors of the type? And are they better predictors than roundness and area?\n",
