--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -10,25 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cbe45c1e-ecbb-4793-b803-00e624b6b055",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n",
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "install.packages(\"cowplot\")\n",
     "install.packages(\"kknn\")\n",
@@ -37,31 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "cf6aaebf-58ca-429f-8498-58ef04ba5b82",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "library(GGally)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "31c75def",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.2’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(tidymodels): there is no package called ‘tidymodels’\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(tidymodels): there is no package called ‘tidymodels’\nTraceback:\n",
-      "1. library(tidymodels)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import libraries\n",
     "install.packages(\"themis\")\n",
@@ -155,6 +135,116 @@
    "source": [
     "**Select variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. According to a study published in the Journal of Food Engineering (2012), area and roundness were among the most important features for accurate classification (Rahman et al., 2012). Also, these two variable produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*).\n",
     "We will select the relevant columns, 'Area', 'roundness', and 'Class from *Table 1* to create another table. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b11448-d753-44db-9d35-aff4a90a9ee8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "matrix_corr_bean <- ggpairs(bean, mapping = aes(color = Class), columns = c(\"Area\", \"Perimeter\", \"MajorAxisLength\",\"MinorAxisLength\",\"AspectRation\",\"Eccentricity\",\n",
+    "                                                                            \"ConvexArea\",\"EquivDiameter\",\"Extent\",\"Solidity\",\"roundness\"),\n",
+    "                           lower = list(continuous = wrap(\"points\", size = 0.4), combo = wrap(\"dot_no_facet\", alpha = 0.4)))+\n",
+    "                            theme(text = element_text (size = 20))\n",
+    "matrix_corr_bean <- matrix_corr_bean + theme(axis.text = element_text(size = 20))\n",
+    "matrix_corr_bean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf28c725-da48-4b31-99ee-2de39d4c7b03",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# plot_list <- list()\n",
+    "\n",
+    "# for (i in 2:11) {\n",
+    "#     for (j in 1:(i-1)) {\n",
+    "#         matrix_corr_bean[i,j]\n",
+    "        \n",
+    "#         }\n",
+    "#     }\n",
+    "options(repr.plot.width = 30, repr.plot.height = 100)\n",
+    "# plot_grid( matrix_corr_bean[2,1], matrix_corr_bean[3,1],\n",
+    "#            matrix_corr_bean[3,2],\n",
+    "#            matrix_corr_bean[4,1],matrix_corr_bean[4,2], \n",
+    "#            matrix_corr_bean[4,3],nrow = 3, ncol = 3)\n",
+    "# plot_grid(\n",
+    "#            matrix_corr_bean[5,1],matrix_corr_bean[5,2],\n",
+    "#            matrix_corr_bean[5,3],matrix_corr_bean[5,4],\n",
+    "#            matrix_corr_bean[6,1],matrix_corr_bean[6,2],\n",
+    "#            nrow = 3, ncol = 3)\n",
+    "\n",
+    "# plot_grid(           \n",
+    "#            matrix_corr_bean[6,3],matrix_corr_bean[6,4],\n",
+    "#            matrix_corr_bean[6,5],matrix_corr_bean[7,1],\n",
+    "#            matrix_corr_bean[7,2],matrix_corr_bean[7,3],\n",
+    "#            nrow=3,ncol=3)\n",
+    "# plot_grid(\n",
+    "#            matrix_corr_bean[7,4],matrix_corr_bean[7,5],\n",
+    "#            matrix_corr_bean[7,6],matrix_corr_bean[8,1],\n",
+    "#            matrix_corr_bean[8,2],matrix_corr_bean[8,3],\n",
+    "#            nrow = 3, ncol = 3)\n",
+    "# plot_grid(\n",
+    "#            matrix_corr_bean[8,4],matrix_corr_bean[8,5],\n",
+    "#            matrix_corr_bean[8,6],matrix_corr_bean[8,7],\n",
+    "#            matrix_corr_bean[9,1],matrix_corr_bean[9,2],\n",
+    "#            nrow = 3, ncol = 3)\n",
+    "# plot_grid( matrix_corr_bean[9,3],matrix_corr_bean[9,4],\n",
+    "#            matrix_corr_bean[9,5],matrix_corr_bean[9,6],\n",
+    "#            matrix_corr_bean[9,7],matrix_corr_bean[9,8],\n",
+    "#            nrow = 3, ncol = 3)\n",
+    "# plot_grid(\n",
+    "#            matrix_corr_bean[10,1],matrix_corr_bean[10,2],\n",
+    "#            matrix_corr_bean[10,3],matrix_corr_bean[10,4],\n",
+    "#            matrix_corr_bean[10,5],matrix_corr_bean[10,6],\n",
+    "#            nrow = 3, ncol = 3)\n",
+    "# plot_grid( matrix_corr_bean[10,7],matrix_corr_bean[10,8],\n",
+    "#            matrix_corr_bean[10,9],matrix_corr_bean[11,1],\n",
+    "#            matrix_corr_bean[11,2],matrix_corr_bean[11,3],\n",
+    "#            nrow = 3, ncol = 3)\n",
+    "# plot_grid( matrix_corr_bean[11,4],matrix_corr_bean[11,5],\n",
+    "#            matrix_corr_bean[11,6],matrix_corr_bean[11,7],\n",
+    "#            matrix_corr_bean[11,8],matrix_corr_bean[11,9],\n",
+    "#            matrix_corr_bean[11,10],\n",
+    "#            nrow = 4, ncol = 3)\n",
+    "plot_grid( matrix_corr_bean[2,1], matrix_corr_bean[3,1],\n",
+    "           matrix_corr_bean[3,2],\n",
+    "           matrix_corr_bean[4,1],matrix_corr_bean[4,2], \n",
+    "           matrix_corr_bean[4,3],\n",
+    "           matrix_corr_bean[5,1],matrix_corr_bean[5,2],\n",
+    "           matrix_corr_bean[5,3],matrix_corr_bean[5,4],\n",
+    "           matrix_corr_bean[6,1],matrix_corr_bean[6,2],         \n",
+    "           matrix_corr_bean[6,3],matrix_corr_bean[6,4],\n",
+    "           matrix_corr_bean[6,5],matrix_corr_bean[7,1],\n",
+    "           matrix_corr_bean[7,2],matrix_corr_bean[7,3],\n",
+    "           matrix_corr_bean[7,4],matrix_corr_bean[7,5],\n",
+    "           matrix_corr_bean[7,6],matrix_corr_bean[8,1],\n",
+    "           matrix_corr_bean[8,2],matrix_corr_bean[8,3],\n",
+    "           matrix_corr_bean[8,4],matrix_corr_bean[8,5],\n",
+    "           matrix_corr_bean[8,6],matrix_corr_bean[8,7],\n",
+    "           matrix_corr_bean[9,1],matrix_corr_bean[9,2],\n",
+    "           matrix_corr_bean[9,3],matrix_corr_bean[9,4],\n",
+    "           matrix_corr_bean[9,5],matrix_corr_bean[9,6],\n",
+    "           matrix_corr_bean[9,7],matrix_corr_bean[9,8],\n",
+    "           matrix_corr_bean[10,1],matrix_corr_bean[10,2],\n",
+    "           matrix_corr_bean[10,3],matrix_corr_bean[10,4],\n",
+    "           matrix_corr_bean[10,5],matrix_corr_bean[10,6],\n",
+    "           matrix_corr_bean[10,7],matrix_corr_bean[10,8],\n",
+    "           matrix_corr_bean[10,9],matrix_corr_bean[11,1],\n",
+    "           matrix_corr_bean[11,2],matrix_corr_bean[11,3],\n",
+    "           matrix_corr_bean[11,4],matrix_corr_bean[11,5],\n",
+    "           matrix_corr_bean[11,6],matrix_corr_bean[11,7],\n",
+    "           matrix_corr_bean[11,8],matrix_corr_bean[11,9],\n",
+    "           matrix_corr_bean[11,10],\n",
+    "           nrow = 16, ncol = 3)"
    ]
   },
   {
@@ -795,22 +885,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d827405f-3648-46b8-9185-a2f8ad1d864c",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in ggplot(bean_predictions, aes(x = Area, y = roundness, color = .pred_class)): object 'bean_predictions' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in ggplot(bean_predictions, aes(x = Area, y = roundness, color = .pred_class)): object 'bean_predictions' not found\nTraceback:\n",
-      "1. ggplot(bean_predictions, aes(x = Area, y = roundness, color = .pred_class))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "bean_predictions_plot <- bean_predictions |>\n",
