grammar edits to discussion (up to selecting variables)

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -133,9 +133,9 @@
     "\n",
     "**Research Question**: Can we accurately predict the bean type in an image based on the predictors Area and Roundness?\n",
     "\n",
-    "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features) (Kolku & Ozkan, 2020). While the dataset use up to 12 predictors to classify the data points, we will try to reduce the number of the predictor and see if the accuracy of the estimate still has high or nearly has high.\n",
+    "This dataset is based on 13611 images of 7 types of individual dry beans with similar features. Each image was analyzed for 16 features of the bean (4 \"shape factors\", 12 structural/geometric features) (Kolku & Ozkan, 2020). While the dataset uses up to 12 predictors to classify the data points, we will try to reduce the number of the predictors and see if the accuracy of the estimate is still high or nearly as high as when using the full set of predictors.\n",
     "\n",
-    "We will be using the K-nearest neighbours classification to predict \"Class\" using the mentioned predictors. K-nearest neighbours find the K-closest data points to the input sample and assign the most common class label among them. The accuracy of the model can be improved by tuning the value of K.\n",
+    "We will be using the K-nearest neighbours classification to predict \"Class\" using the mentioned predictors. K-nearest neighbours finds the K-closest data points to the input sample and assigns the most common class label amongst them. The accuracy of the model can be improved by tuning the value of K.\n",
     "\n",
     "\n",
     "Our variable of intetrest (Kolku & Ozkan, 2020).:\n",
@@ -156,7 +156,7 @@
    "id": "4446a1c8-968a-4cd2-8849-e16a2329e7aa",
    "metadata": {},
    "source": [
-    "**Load Data**: A zip file was loaded from the original web source (https). Then, we create a temporary file path to store the *temp* variable, to temporarily store the downloaded zip file before it is extracted. Next, we use 'download.file' to download the zip file and save it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named our the data frame 'bean'. \n"
+    "**Load Data**: A zip file was loaded from the original web source (https). Then, we created a temporary file path to store the *temp* variable, to temporarily store the downloaded zip file before it is extracted. Next, we used 'download.file' to download the zip file and saved it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named the data frame 'bean'. \n"
    ]
   },
   {
@@ -376,19 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "930fa6a1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in initial_split(select_bean, prop = 0.75, strata = Class): could not find function \"initial_split\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in initial_split(select_bean, prop = 0.75, strata = Class): could not find function \"initial_split\"\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Creating training and testing dataset\n",
     "\n",
@@ -429,7 +420,7 @@
    "id": "58ddf691",
    "metadata": {},
    "source": [
-    "From *Figure 3*, we can see that there is a big difference between the area value and the roundness value. Therefore, we will scale the data, which will be dealt with in `workflow()` . Next, we summarized the training dataset to see the distribution of bean types. We grouped the beans by their types (Class) , summarized by their counts, and created a new column called *percentage_dist* to find the percentage of each bean type in the training dataset. "
+    "From *Figure 3*, we can see that there is a big difference between the area value and the roundness value. Therefore, we will scale the data, which will be dealt with in `workflow()` . Next, we summarized the training dataset to visualize the distribution of bean types. We grouped the beans by their types (Class) , summarized by their counts, and created a new column called *percentage_dist* to find the percentage of each bean type in the training dataset. "
    ]
   },
   {
